<resources>
    <string name="app_name">SimpleSshConnector</string>
    <string name="title_main_app">Simple SSH Connector</string>

    <string name="action_terminal">Terminal</string>
    <string name="action_configuration">Configuration</string>
    <string name="action_connect">Reload</string>
    <string name="action_upload">Upload</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_generate_key">Generate key</string>
    <string name="action_copy">Copy</string>
    <string name="action_send">Send</string>
    <string name="action_exit">Cancel</string>
    <string name="action_copy_command">Copy command</string>
    <string name="action_refresh_terminal">Refresh terminal</string>
    <string name="action_autocomplete">Autocomplete command</string>
    <string name="action_previous_command">Previous command</string>
    <string name="action_next_command">Next command</string>

    <string name="hint_ssh_target">user@host:port</string>
    <string name="hint_remote_apk_path">shared folder path</string>
    <string name="hint_terminal_start_path">leave empty for home</string>
    <string name="hint_ssh_public_key">SSH public key</string>
    <string name="hint_terminal_command">Enter command...</string>

    <string name="title_configuration">Configuration</string>
    <string name="title_ssh_terminal">SSH Terminal</string>
    <string name="label_server_address">SSH server:</string>
    <string name="label_remote_apk_path">Shared folder:</string>
    <string name="label_shared_folder_section">Shared folder</string>
    <string name="label_shared_folder_path">Remote path: %1$s</string>
    <string name="label_shared_folder_path_error">&lt;path error&gt;</string>
    <string name="label_terminal_start_path">Terminal start folder:</string>
    <string name="label_install_downloaded_apks">Install downloaded .apk files automatically</string>
    <string name="label_upload_screenshots">Upload screenshots to shared folder</string>

    <string name="message_ssh_target_and_key_required">SSH target and generated key are required</string>
    <string name="message_ssh_target_key_and_path_required">SSH target, generated key, and shared folder are required</string>
    <string name="message_connecting">Connecting</string>
    <string name="message_ssh_error">SSH error: %1$s</string>
    <string name="message_no_files_found">No files in this shared folder</string>
    <string name="message_no_files_found_detail">Upload or build a file on the server, then load the folder again.</string>
    <string name="message_download_started">Download started: %1$s</string>
    <string name="message_download_completed">Download completed: %1$s</string>
    <string name="message_download_error">Download error: %1$s</string>
    <string name="message_upload_started">Upload started: %1$s</string>
    <string name="message_upload_completed">Uploaded: %1$s</string>
    <string name="message_upload_error">Upload error: %1$s</string>
    <string name="message_file_picker_error">Cannot open file picker: %1$s</string>
    <string name="message_install_open_error">Cannot open installer: %1$s</string>
    <string name="title_delete_file">Delete file?</string>
    <string name="message_confirm_delete_file">Are you sure you want to delete %1$s?</string>
    <string name="title_generate_key_warning">Generate new SSH key?</string>
    <string name="message_confirm_generate_key">Generating a new SSH key replaces the current key. You will not be able to connect to this server with the old key unless that old public key is still authorized on the server.</string>
    <string name="message_delete_started">Delete started: %1$s</string>
    <string name="message_delete_completed">Deleted: %1$s</string>
    <string name="message_delete_error">Delete error: %1$s</string>
    <string name="message_generating_key">Generating key</string>
    <string name="message_key_generated">Key generated</string>
    <string name="message_generation_error">Generation error: %1$s</string>
    <string name="message_no_public_key">No public key</string>
    <string name="message_public_key_copied">Public key copied</string>
    <string name="message_terminal_not_connected">Terminal is not connected</string>
    <string name="message_terminal_connection_lost">SSH connection was lost</string>
    <string name="message_terminal_connection_recovered">SSH connection was recovered</string>
    <string name="message_no_command">No command</string>
    <string name="message_command_copied">Command copied</string>
    <string name="message_image_permission_required">Image permission is required to upload screenshots</string>
    <string name="message_screenshot_uploaded">Screenshot uploaded to shared folder</string>
    <string name="message_screenshot_upload_error">Screenshot upload error: %1$s</string>

    <string name="terminal_connecting">Connecting to %1$s...\n</string>
    <string name="terminal_connected">[connected]\n</string>
    <string name="terminal_connection_recovered">[connection recovered]\n</string>
    <string name="terminal_disconnected">\n[disconnected]\n</string>
    <string name="terminal_connection_error">\n[connection error: %1$s]\n</string>
    <string name="terminal_reconnecting">\n[connection lost; retrying in %1$d seconds]\n</string>
    <string name="terminal_remote_shell_closed">\n[remote shell closed]\n</string>
    <string name="terminal_write_error">\n[write error: %1$s]\n</string>

    <string name="clipboard_ssh_public_key">SSH public key</string>
    <string name="clipboard_terminal_command">Terminal command</string>
    <string name="notification_file_downloaded">File downloaded</string>
    <string name="notification_channel_apk_downloads">File downloads</string>
    <string name="notification_channel_terminal">SSH terminal</string>
    <string name="notification_terminal_active">SSH terminal active</string>
    <string name="notification_terminal_active_detail">Keeping the terminal session connected</string>
</resources>
